[package]
name = "aws-lc"
version = "2.0.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>", "Justin Smith <justsmth@amazon.com>"]
license = "Apache-2.0"
description = "AWS-LC bindings"
repository = "https://github.com/justsmth/rust-aws-lc"
documentation = "https://docs.rs/aws-lc"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2018"

[dependencies]
bitflags = "1.0"
foreign-types = "0.5"
lazy_static = "1"
libc = "0.2"
aws-lc-sys = { version = ">=1.1.0,<3.0.0", path = "../aws-lc-sys" }

[dev-dependencies]
hex = "0.4"
rusty-hook = "^0.11"

[features]
# Use a FIPS-validated version of aws-lc.
fips = ["aws-lc-sys/fips"]
